[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/Wizard.gd" type="Script" id=1]
[ext_resource path="res://Assets/FireWizardIdle.png" type="Texture" id=2]
[ext_resource path="res://Assets/FireWizardCharge1.png" type="Texture" id=3]
[ext_resource path="res://Assets/FireWizardCharge2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sounds/wizard teleport.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/fire.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 7.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Charge",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Teleport:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Wizard" type="Area2D" groups=["wizard"]]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.5, 0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Idle"

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="ChargeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/appear = SubResource( 4 )

[node name="Teleport" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
bus = "Effects"

[node name="Fire" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="ChargeTimer" to="." method="_on_ChargeTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
